<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.procore.hackathon.labourlink.ui.jobs.JobsFragment"
        android:label="@string/title_jobs"
        tools:layout="@layout/fragment_jobs" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.procore.hackathon.labourlink.ui.myjobs.MyJobsFragment"
        android:label="@string/my_jobs"
        tools:layout="@layout/fragment_my_jobs" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.procore.hackathon.labourlink.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_notifications">
        <action
            android:id="@+id/to_edit_profile"
            app:destination="@id/navigation_edit_profile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_edit_profile"
        android:name="com.procore.hackathon.labourlink.ui.profile.EditProfileFragment"
        android:label="@string/title_edit_profile"
        tools:layout="@layout/fragment_edit_profile">
        <action
            android:id="@+id/to_profile"
            app:destination="@id/navigation_profile" />
    </fragment>
</navigation>