<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_experience_details"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:paddingBottom="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="center"
        style="@style/TextAppearance.MaterialComponents.Body1"/>

    <EditText
        android:id="@+id/years_et"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintEnd_toStartOf="@id/years_text"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:textAlignment="center"
        style="@style/TextAppearance.MaterialComponents.Body1"/>

    <TextView
        android:id="@+id/years_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="Years and "
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/years_et"
        app:layout_constraintTop_toTopOf="@id/years_et"
        android:textAlignment="center"
        app:layout_constraintHorizontal_chainStyle="packed"
        style="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintEnd_toStartOf="@id/months_et"/>

    <EditText
        android:id="@+id/months_et"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/years_text"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintEnd_toStartOf="@id/months_text"
        android:textAlignment="center"
        app:layout_constraintHorizontal_chainStyle="packed"
        style="@style/TextAppearance.MaterialComponents.Body1"/>

    <TextView
        android:id="@+id/months_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/months"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/months_et"
        app:layout_constraintTop_toTopOf="@id/months_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:textAlignment="center"
        style="@style/TextAppearance.MaterialComponents.Body1"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/update_profile_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/years_text"
        style="?attr/materialButtonOutlinedStyle"/>

</androidx.constraintlayout.widget.ConstraintLayout>